# tgbot_price_search

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  audio_converter.py  commands.py  config.py  file_upload.py  handlers.py  main.py  oga.py  price_list.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: lint_and_types.yml
autosnab_bot/: .env.example  __main__.py  config.py
autosnab_bot/handlers/: __init__.py  download.py  help.py  response.py  search.py  start.py
autosnab_bot/services/: file_upload.py  price_list.py  price_search.py  price_search_cache.py  validate_user.py
tests/: test_search.py
upload/: price.xlsx
